[package]
name = "bbfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
binrw = "0.13.3"
clap = { version = "4.5.4", features = ["derive"] }
morton-encoding = "2.0.1"
thiserror = "1.0.58"
bb = { path = "../bbrs" }
